Thread local setup done

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,36 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Parabank Test Suite</th></tr>
-<tr><td><a href="#t0">Parabank Smoke Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,684</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Parabank Smoke Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">8,566</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Parabank Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Parabank Smoke Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Test.LoginPageTest</td><td><a href="#m0">verifyLoginWithInvalidCredentials</a></td><td rowspan="1">1758403276843</td><td rowspan="1">496</td></tr><tr class="passedeven"><td><a href="#m1">verifyLoginWithValidCredentials</a></td><td rowspan="1">1758403277342</td><td rowspan="1">109</td></tr><tr class="passedodd"><td rowspan="1">Test.RegisterPageTest</td><td><a href="#m2">RegistrationProcessTest</a></td><td rowspan="1">1758403274874</td><td rowspan="1">1964</td></tr><tr class="passedeven"><td rowspan="1">Test.TransferFundPageTest</td><td><a href="#m3">transferFundsPageTest</a></td><td rowspan="1">1758403277451</td><td rowspan="1">1685</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Parabank Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Parabank Smoke Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Test.RegisterPageTest</td><td><a href="#m0">RegistrationProcessTest</a></td><td rowspan="1">1759691141026</td><td rowspan="1">2076</td></tr><tr><th colspan="4">Parabank Smoke Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Test.LoginPageTest</td><td><a href="#m1">verifyLoginWithInvalidCredentials</a></td><td rowspan="1">1759691143163</td><td rowspan="1">801</td></tr><tr class="passedeven"><td><a href="#m2">verifyLoginWithValidCredentials</a></td><td rowspan="1">1759691143967</td><td rowspan="1">1759</td></tr><tr class="passedodd"><td rowspan="1">Test.TransferFundPageTest</td><td><a href="#m3">transferFundsPageTest</a></td><td rowspan="1">1759691145730</td><td rowspan="1">1480</td></tr></tbody>
 </table>
-<h2>Parabank Smoke Test</h2><h3 id="m0">Test.LoginPageTest#verifyLoginWithInvalidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Test.LoginPageTest#verifyLoginWithValidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Test.RegisterPageTest#RegistrationProcessTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Parabank Smoke Test</h2><h3 id="m0">Test.RegisterPageTest#RegistrationProcessTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//a[text()=&apos;Log Out&apos;]&quot;}
+  (Session info: chrome=140.0.7339.208)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
+Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;11.0.27&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [d12fa9ffff5eaf9cd5d7b6f2e1ca2440, findElement {value=//a[text()=&apos;Log Out&apos;], using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 140.0.7339.208, chrome: {chromedriverVersion: 140.0.7339.80 (670b6f192f46..., userDataDir: C:\Users\chand\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:59932}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:59932/devtoo..., se:cdpVersion: 140.0.7339.208, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: d12fa9ffff5eaf9cd5d7b6f2e1ca2440
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:545)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:368)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:362)
+	at Pages.RegisterPage.clickLogOutButton(RegisterPage.java:86)
+	at Test.RegisterPageTest.RegistrationProcessTest(RegisterPageTest.java:35)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Test.LoginPageTest#verifyLoginWithInvalidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Test.LoginPageTest#verifyLoginWithValidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">Test.TransferFundPageTest#transferFundsPageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
