--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Parabank_Test_Suite" class="navigator-link">
-              <span class="suite-name border-passed">Parabank Test Suite</span>
+              <span class="suite-name border-failed">Parabank Test Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,7 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">4 methods, 1 failed,   3 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Parabank_Test_Suite" class="hide-methods failed suite-Parabank_Test_Suite"> (hide)</a> <!-- hide-methods failed suite-Parabank_Test_Suite -->
+                      <a href="#" panel-name="suite-Parabank_Test_Suite" class="show-methods failed suite-Parabank_Test_Suite"> (show)</a> <!-- show-methods failed suite-Parabank_Test_Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Parabank_Test_Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Parabank_Test_Suite" title="Test.RegisterPageTest" class="method navigator-link" hash-for-method="RegistrationProcessTest">RegistrationProcessTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Parabank_Test_Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,11 +115,6 @@
                       <a href="#" panel-name="suite-Parabank_Test_Suite" class="show-methods passed suite-Parabank_Test_Suite"> (show)</a> <!-- show-methods passed suite-Parabank_Test_Suite -->
                     </span>
                     <div class="method-list-content passed suite-Parabank_Test_Suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Parabank_Test_Suite" title="Test.RegisterPageTest" class="method navigator-link" hash-for-method="RegistrationProcessTest">RegistrationProcessTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Parabank_Test_Suite" title="Test.TransferFundPageTest" class="method navigator-link" hash-for-method="transferFundsPageTest">transferFundsPageTest</a> <!-- method navigator-link -->
@@ -133,9 +142,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Parabank_Test_Suite" class="panel Parabank_Test_Suite">
-          <div class="suite-Parabank_Test_Suite-class-passed">
+          <div class="suite-Parabank_Test_Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">Test.RegisterPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -144,10 +153,35 @@
                   <a name="RegistrationProcessTest">
                   </a> <!-- RegistrationProcessTest -->
                   <span class="method-name">RegistrationProcessTest</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//a[text()=&apos;Log Out&apos;]&quot;}
+  (Session info: chrome=140.0.7339.208)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
+Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;11.0.27&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [d12fa9ffff5eaf9cd5d7b6f2e1ca2440, findElement {value=//a[text()=&apos;Log Out&apos;], using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 140.0.7339.208, chrome: {chromedriverVersion: 140.0.7339.80 (670b6f192f46..., userDataDir: C:\Users\chand\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:59932}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:59932/devtoo..., se:cdpVersion: 140.0.7339.208, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: d12fa9ffff5eaf9cd5d7b6f2e1ca2440
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:545)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:368)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:362)
+	at Pages.RegisterPage.clickLogOutButton(RegisterPage.java:86)
+	at Test.RegisterPageTest.RegistrationProcessTest(RegisterPageTest.java:35)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+... Removed 31 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Parabank_Test_Suite-class-passed -->
+          </div> <!-- suite-Parabank_Test_Suite-class-failed -->
           <div class="suite-Parabank_Test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -244,24 +278,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'RegistrationProcessTest')
 data.setCell(0, 2, 'Test.RegisterPageTest')
-data.setCell(0, 3, 1964);
+data.setCell(0, 3, 2076);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'transferFundsPageTest')
-data.setCell(1, 2, 'Test.TransferFundPageTest')
-data.setCell(1, 3, 1685);
+data.setCell(1, 1, 'verifyLoginWithValidCredentials')
+data.setCell(1, 2, 'Test.LoginPageTest')
+data.setCell(1, 3, 1759);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyLoginWithInvalidCredentials')
-data.setCell(2, 2, 'Test.LoginPageTest')
-data.setCell(2, 3, 496);
+data.setCell(2, 1, 'transferFundsPageTest')
+data.setCell(2, 2, 'Test.TransferFundPageTest')
+data.setCell(2, 3, 1480);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyLoginWithValidCredentials')
+data.setCell(3, 1, 'verifyLoginWithInvalidCredentials')
 data.setCell(3, 2, 'Test.LoginPageTest')
-data.setCell(3, 3, 109);
+data.setCell(3, 3, 801);
 window.suiteTableData['Parabank_Test_Suite']= { tableData: data, tableDiv: 'times-div-Parabank_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Parabank_Test_Suite">
               </div> <!-- times-div-Parabank_Test_Suite -->
             </div> <!-- times-div -->
@@ -282,9 +316,9 @@ return data;
             <div class="ignored-class-div">
               <span class="ignored-class-name">Test.RegisterPageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">quitBrowser</span>
-                <br/>
                 <span class="ignored-method-name">setUpTest</span>
+                <br/>
+                <span class="ignored-method-name">quitBrowser</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -300,9 +334,9 @@ return data;
             <div class="ignored-class-div">
               <span class="ignored-class-name">Test.LoginPageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">setUpTest</span>
-                <br/>
                 <span class="ignored-method-name">quitBrowser</span>
+                <br/>
+                <span class="ignored-method-name">setUpTest</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -324,40 +358,42 @@ return data;
               <div class="chronological-class-name">Test.RegisterPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">1723 ms</span>
+                <span class="method-start">1339 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">RegistrationProcessTest</span>
-                <span class="method-start">4130 ms</span>
+                <span class="method-start">3679 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Test.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">6096 ms</span>
+                <span class="method-start">5781 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithInvalidCredentials</span>
-                <span class="method-start">6099 ms</span>
+                <span class="method-start">5816 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithValidCredentials</span>
-                <span class="method-start">6598 ms</span>
+                <span class="method-start">6620 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Test.TransferFundPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">transferFundsPageTest</span>
-                <span class="method-start">6707 ms</span>
+                <span class="method-start">8383 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Test.TestSuiteSetUp</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">quitBrowser</span>
-                <span class="method-start">8423 ms</span>
+                <span class="method-start">9942 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
