--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,  1 skipped,  1 passed</span>
+                    <span class="method-stats">4 methods, 1 failed,  3 skipped,  </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -103,7 +103,7 @@
                     <div class="method-list-content failed suite-Parabank_Test_Suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Parabank_Test_Suite" title="Test.LoginPageTest" class="method navigator-link" hash-for-method="verifyLoginWithValidCredentials(Chand-123, Chand@123)">verifyLoginWithValidCredentials(Chand-123, Chand@123)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Parabank_Test_Suite" title="Test.RegisterPageTest" class="method navigator-link" hash-for-method="RegistrationProcessTest(Chand-123, Chand@123)">RegistrationProcessTest(Chand-123, Chand@123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Parabank_Test_Suite -->
@@ -120,21 +120,17 @@
                         <a href="#" panel-name="suite-Parabank_Test_Suite" title="Test.TransferFundPageTest" class="method navigator-link" hash-for-method="transferFundsPageTest">transferFundsPageTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content skipped suite-Parabank_Test_Suite -->
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Parabank_Test_Suite" class="hide-methods passed suite-Parabank_Test_Suite"> (hide)</a> <!-- hide-methods passed suite-Parabank_Test_Suite -->
-                      <a href="#" panel-name="suite-Parabank_Test_Suite" class="show-methods passed suite-Parabank_Test_Suite"> (show)</a> <!-- show-methods passed suite-Parabank_Test_Suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Parabank_Test_Suite">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Parabank_Test_Suite" title="Test.RegisterPageTest" class="method navigator-link" hash-for-method="RegistrationProcessTest(Chand-123, Chand@123)">RegistrationProcessTest(Chand-123, Chand@123)</a> <!-- method navigator-link -->
+                        <img src="skipped.png" width="3%"/>
+                        <a href="#" panel-name="suite-Parabank_Test_Suite" title="Test.LoginPageTest" class="method navigator-link" hash-for-method="verifyLoginWithInvalidCredentials">verifyLoginWithInvalidCredentials</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Parabank_Test_Suite -->
+                      <span>
+                        <img src="skipped.png" width="3%"/>
+                        <a href="#" panel-name="suite-Parabank_Test_Suite" title="Test.LoginPageTest" class="method navigator-link" hash-for-method="verifyLoginWithValidCredentials">verifyLoginWithValidCredentials</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content skipped suite-Parabank_Test_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -149,19 +145,28 @@
           <div class="suite-Parabank_Test_Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">Test.LoginPageTest</span>
+              <span class="class-name">Test.RegisterPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyLoginWithValidCredentials(Chand-123, Chand@123)">
-                  </a> <!-- verifyLoginWithValidCredentials(Chand-123, Chand@123) -->
-                  <span class="method-name">verifyLoginWithValidCredentials</span>
+                  <a name="RegistrationProcessTest(Chand-123, Chand@123)">
+                  </a> <!-- RegistrationProcessTest(Chand-123, Chand@123) -->
+                  <span class="method-name">RegistrationProcessTest</span>
                   <span class="parameters">(Chand-123,Chand@123)</span>
-                  <div class="stack-trace">java.lang.AssertionError: Title of the Page mismatched expected [ParaBank | Accounts Overview] but found [ParaBank | Error]
-	at Test.LoginPageTest.verifyLoginWithValidCredentials(LoginPageTest.java:37)
+                  <div class="stack-trace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for visibility of element located by By.xpath: //a[text()=&apos;Log Out&apos;] (tried for 20 second(s) with 500 milliseconds interval)
+Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;11.0.27&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 141.0.7390.123, chrome: {chromedriverVersion: 140.0.7339.80 (670b6f192f46..., userDataDir: C:\Users\chand\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:58729}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:58729/devtoo..., se:cdpVersion: 141.0.7390.123, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 6164f91f235c0bd7ee9643d6e971f3c6
+	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
+	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
+	at Utils.WaitUtils.waitForVisibility(WaitUtils.java:25)
+	at Pages.RegisterPage.clickLogOutButton(RegisterPage.java:86)
+	at Test.RegisterPageTest.RegistrationProcessTest(RegisterPageTest.java:36)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
-... Removed 32 stack frames
+... Removed 27 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -178,7 +183,7 @@
                   <a name="transferFundsPageTest">
                   </a> <!-- transferFundsPageTest -->
                   <span class="method-name">transferFundsPageTest</span>
-                  <div class="stack-trace">java.lang.Throwable: Method TransferFundPageTest.transferFundsPageTest()[pri:0, instance:Test.TransferFundPageTest@4be29ed9] depends on not successfully finished methods in group &quot;login&quot;
+                  <div class="stack-trace">java.lang.Throwable: Method TransferFundPageTest.transferFundsPageTest()[pri:0, instance:Test.TransferFundPageTest@1349883] depends on not successfully finished methods in group &quot;login&quot;
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
 ... Removed 18 stack frames
 </div> <!-- stack-trace -->
@@ -186,22 +191,37 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Parabank_Test_Suite-class-skipped -->
-          <div class="suite-Parabank_Test_Suite-class-passed">
+          <div class="suite-Parabank_Test_Suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">Test.RegisterPageTest</span>
+              <img src="skipped.png"/>
+              <span class="class-name">Test.LoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="RegistrationProcessTest(Chand-123, Chand@123)">
-                  </a> <!-- RegistrationProcessTest(Chand-123, Chand@123) -->
-                  <span class="method-name">RegistrationProcessTest</span>
-                  <span class="parameters">(Chand-123,Chand@123)</span>
+                  <a name="verifyLoginWithInvalidCredentials">
+                  </a> <!-- verifyLoginWithInvalidCredentials -->
+                  <span class="method-name">verifyLoginWithInvalidCredentials</span>
+                  <div class="stack-trace">java.lang.Throwable: Method LoginPageTest.verifyLoginWithInvalidCredentials()[pri:0, instance:Test.LoginPageTest@4a83a74a] depends on not successfully finished methods in group &quot;register&quot;
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+... Removed 18 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyLoginWithValidCredentials">
+                  </a> <!-- verifyLoginWithValidCredentials -->
+                  <span class="method-name">verifyLoginWithValidCredentials</span>
+                  <div class="stack-trace">java.lang.Throwable: Method Test.LoginPageTest.verifyLoginWithValidCredentials() on instance Test.LoginPageTest@4a83a74a depends on not successfully finished methods 
+[Test.LoginPageTest.verifyLoginWithInvalidCredentials() on instance Test.LoginPageTest@4a83a74a]
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+... Removed 18 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Parabank_Test_Suite-class-passed -->
+          </div> <!-- suite-Parabank_Test_Suite-class-skipped -->
         </div> <!-- panel Parabank_Test_Suite -->
         <div panel-name="test-xml-Parabank_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -212,6 +232,9 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Parabank Test Suite&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;Listeners.TestListeners&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Parabank Smoke Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;Test.TestSuiteSetUp&quot;/&gt;
@@ -245,6 +268,10 @@
               <span class="test-group-name">login</span>
               <br/>
               <div class="method-in-group">
+                <span class="method-in-group-name">verifyLoginWithInvalidCredentials</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
                 <span class="method-in-group-name">verifyLoginWithValidCredentials</span>
                 <br/>
               </div> <!-- method-in-group -->
@@ -273,24 +300,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyLoginWithValidCredentials')
-data.setCell(0, 2, 'Test.LoginPageTest')
-data.setCell(0, 3, 4006);
+data.setCell(0, 1, 'RegistrationProcessTest')
+data.setCell(0, 2, 'Test.RegisterPageTest')
+data.setCell(0, 3, 21792);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'RegistrationProcessTest')
-data.setCell(1, 2, 'Test.RegisterPageTest')
-data.setCell(1, 3, 2744);
+data.setCell(1, 1, 'verifyLoginWithInvalidCredentials')
+data.setCell(1, 2, 'Test.LoginPageTest')
+data.setCell(1, 3, 1);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'transferFundsPageTest')
-data.setCell(2, 2, 'Test.TransferFundPageTest')
+data.setCell(2, 1, 'verifyLoginWithValidCredentials')
+data.setCell(2, 2, 'Test.LoginPageTest')
 data.setCell(2, 3, 0);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'transferFundsPageTest')
+data.setCell(3, 2, 'Test.TransferFundPageTest')
+data.setCell(3, 3, 0);
 window.suiteTableData['Parabank_Test_Suite']= { tableData: data, tableDiv: 'times-div-Parabank_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 21 seconds</span>
               <div id="times-div-Parabank_Test_Suite">
               </div> <!-- times-div-Parabank_Test_Suite -->
             </div> <!-- times-div -->
@@ -326,31 +357,27 @@ return data;
               <div class="chronological-class-name">Test.RegisterPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">3204 ms</span>
+                <span class="method-start">3820 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">RegistrationProcessTest(Chand-123, Chand@123)</span>
-                <span class="method-start">3216 ms</span>
+                <span class="method-start">3838 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Test.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">5962 ms</span>
+                <span class="method-start">25823 ms</span>
               </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">verifyLoginWithValidCredentials(Chand-123, Chand@123)</span>
-                <span class="method-start">5963 ms</span>
-              </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Test.TestSuiteSetUp</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">quitBrowser</span>
-                <span class="method-start">10027 ms</span>
+                <span class="method-start">25854 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
